--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
           <h1>I'm <span class="typed" data-typed-items="Mary Okwong,a Designer, a Business Optimizer, a Baker"></span>
           </h1>
-          <p>Designer, Business Processes Optimizer, Baker</p>
+          <p>Designer</p>
+          <p>Business Optimizer, Baker</p>
 
         </div>
         <ul class="list-unstyled list-social black-bg">
