--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mary's Portfolio - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Mary Okwong — Strategy & Ecosystem Programs</title>
+  <meta name="description" content="Strategy & Ecosystem Programs Lead with 7+ years across Web3, fintech, and healthtech. I design and scale developer programs, grants, and innovation ops for emerging markets.">
+  <meta name="keywords" content="web3, ecosystem, strategy, innovation, programs, grants, Africa, emerging markets">
 
   <!-- Favicons -->
   <!-- <link href="assets/img/favicon.png" rel="icon"> -->
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Folio - v4.7.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -41,46 +34,42 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
-      <p class="h4">Mary Okwong</p>
+      <p class="h4 m-0">Mary Okwong</p>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
-
+          <li><a class="nav-link  scrollto" href="#services">What I Do</a></li>
+          <li><a class="nav-link  scrollto" href="#portfolio">Case Studies</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <div id="hero" class="home">
-
     <div class="container">
       <div class="hero-content">
         <div class="hero-mary1">
-
-          <h1>I'm <span class="typed" data-typed-items="Mary Okwong,a Designer, a Business Optimizer, a Baker"></span>
-          </h1>
-          <p>Designer</p>
-          <p>Business Optimizer, Baker</p>
-
+          <h1>I'm <span class="typed" data-typed-items="Mary Okwong, a Strategy & Ecosystem Lead, a Head of Strategy (Web3), an Innovation Programs Builder"></span></h1>
+          <p>Strategy & Ecosystem Programs</p>
+          <p>Web3 • Fintech • Digital Health • Emerging Markets</p>
         </div>
+
         <ul class="list-unstyled list-social black-bg">
           <li class="black-icon"><a href="https://twitter.com/cryptotechgirl_"><i class="bi bi-twitter"></i></a></li>
-          <li class="black-icon"><a href="https://www.instagram.com/okwongmary/"><i class="bi bi-instagram"></i></a>
-          </li>
-          <li class="black-icon"><a href="https://www.linkedin.com/in/maryokwong/"><i class="bi bi-linkedin"></i></a>
-          </li>
+          <li class="black-icon"><a href="https://www.instagram.com/okwongmary/"><i class="bi bi-instagram"></i></a></li>
+          <li class="black-icon"><a href="https://www.linkedin.com/in/maryokwong/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
       </div>
-    </div><!-- End Hero -->
-
+    </div>
   </div>
+  <!-- End Hero -->
+
   <main id="main">
 
     <!-- ======= About Section ======= -->
@@ -88,89 +77,99 @@
       <div class="container">
         <div class="row justify-content-between">
 
-          <div class="col-lg-4 ">
+          <div class="col-lg-4">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="assets/img/personal.png" class="img-responsive" alt="me">
+                <img src="assets/img/personal.png" class="img-responsive" alt="Mary Okwong headshot">
               </div>
             </div>
           </div>
 
           <div class="col-lg-7">
             <div class="about-descr">
-
-              <p class="p-heading">I'm a UI/UX freelance designer who loves fun but unique designs. I also enjoy
-                photographing nature and baking cakes. </p>
-
+              <p class="p-heading">
+                I’m a strategy & ecosystem programs leader with 7+ years across Web3, fintech, and healthtech.
+                I design grants, bounties, accelerators, and execution frameworks that turn frontier tech into real adoption—especially in emerging markets.
+              </p>
+              <p class="separator">
+                Most recently: Head of Execution at <strong>Plural Health</strong> (2025–Present), Co-Founder/CEO at <strong>Mowblox</strong> (2022–2025), and Business Operations Manager at <strong>Clay Foods</strong> (2017–2021).
+                I’m great at diagnosing bottlenecks, structuring programs (OKRs/KPIs/RACI), and scaling developer and startup ecosystems.
+              </p>
             </div>
-
           </div>
+
         </div>
       </div>
-    </div><!-- End About Section -->
+    </div>
+    <!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services / What I Do Section ======= -->
     <div id="services">
       <div class="container">
-
         <div class="services-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-briefcase"></i>
-                <span>UI/UX DESIGN</span>
-                <p class="separator">I love bringing ideas to life </p>
+                <i class="bi bi-diagram-3"></i>
+                <span>Ecosystem Strategy</span>
+                <p class="separator">Designing growth programs (grants, bounties, hackathons, accelerators) that drive protocol adoption.</p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-card-checklist"></i>
-                <span>BRAND IDENTITY</span>
-                <p class="separator">I take pride in producing user-centric and brand-consistent designs to my clients.
-                </p>
+                <i class="bi bi-gear-wide-connected"></i>
+                <span>Strategy & Ops</span>
+                <p class="separator">OKRs, KPIs, and RACI models that improve execution velocity and cross-functional alignment.</p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-bar-chart"></i>
-                <span>WEB DESIGN</span>
-                <p class="separator">Budding Web app developer </p>
+                <i class="bi bi-lightbulb"></i>
+                <span>Innovation Programs</span>
+                <p class="separator">Pilot design & rollout for AI/Web3/fintech/healthtech with clear business cases and scale plans.</p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-binoculars"></i>
-                <span>MOBILE APPS</span>
-                <p class="separator">Budding Mobile app developer </p>
+                <i class="bi bi-cash-coin"></i>
+                <span>Grants & Funding Ops</span>
+                <p class="separator">End-to-end grant frameworks—evaluation, milestone tracking, and ROI on ecosystem spend.</p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="services-block">
-                <i class="bi bi-calendar4-week"></i>
-                <span>PHOTOGRAPHY</span>
-                <p class="separator">As a hobby, I adore photographing various natural objects and foods. </p>
+                <i class="bi bi-people"></i>
+                <span>Developer Programs</span>
+                <p class="separator">Bootcamps & bounties that onboard and retain builders, tied to real products and metrics.</p>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-globe2"></i>
+                <span>Emerging Markets</span>
+                <p class="separator">Africa/MEA go-to-market, partnerships design, and program localization for adoption.</p>
+              </div>
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
+    </div>
+    <!-- End Services Section -->
 
-    </div><!-- End Services Section -->
-
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Case Studies / Portfolio Section ======= -->
     <div id="portfolio" class="paddsection">
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>My Portfolio</h2>
+          <h2>Case Studies</h2>
         </div>
       </div>
 
@@ -180,42 +179,67 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Design</li>
-              <li data-filter=".filter-card">Photography</li>
-              <li data-filter=".filter-web">UI/UX</li>
+              <li data-filter=".filter-ecosystem">Ecosystem</li>
+              <li data-filter=".filter-ops">Strategy & Ops</li>
+              <li data-filter=".filter-innovation">Innovation</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/image5 1.png" class="img-fluid" alt="">
+          <!-- Ecosystem: Mowblox Dev Bounties -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ecosystem">
+            <img src="assets/img/image5 1.png" class="img-fluid" alt="Mowblox developer programs">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/image1 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
-                title="App 1"><i class="bx bx-plus"></i></a>
+              <h4>Mowblox Developer Bounties</h4>
+              <p>Ecosystem Growth • 2,000+ devs onboarded</p>
+              <a href="assets/img/image1 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Mowblox Developer Bounties"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/image3 1.png" class="img-fluid" alt="">
+          <!-- Ops: Plural Health PSP Integration -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ops">
+            <img src="assets/img/image3 1.png" class="img-fluid" alt="Plural Health PSP integration">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+              <h4>Plural Health: Payments Integration</h4>
+              <p>Strategy & Ops • Delivery +30%</p>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Plural Health PSP Integration"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-photography">
-            <img src="assets/img/image4 1.png" class="img-fluid" alt="">
+          <!-- Innovation: ABVS on Scroll -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-innovation">
+            <img src="assets/img/image4 1.png" class="img-fluid" alt="ABVS on Scroll">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
+              <h4>ABVS (Auditable Voting) — Scroll</h4>
+              <p>Innovation • Pilot Design & Governance</p>
+              <a href="assets/img/image4 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="ABVS on Scroll"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <!-- Ecosystem/Fintech: Peripay -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ecosystem">
+            <img src="assets/img/image3 1.png" class="img-fluid" alt="Peripay cross-border">
+            <div class="portfolio-info">
+              <h4>Peripay: Cross-Border Payments</h4>
+              <p>Ecosystem & GTM • Stellar SCF</p>
+              <a href="assets/img/image3 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Peripay Cross-border"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <!-- Ops: Clay Foods -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ops">
+            <img src="assets/img/image5 1.png" class="img-fluid" alt="Clay Foods operations">
+            <div class="portfolio-info">
+              <h4>Clay Foods: Ops & Supply Chain</h4>
+              <p>Ops • Waste −15% • 2017–2021</p>
+              <a href="assets/img/image5 1.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Clay Foods Operations"><i class="bx bx-plus"></i></a>
+              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -223,9 +247,8 @@
 
       </div>
 
-    </div><!-- End Portfolio Section -->
-
-
+    </div>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <div id="contact" class="paddsection">
@@ -235,23 +258,22 @@
 
             <div class="col-lg-6">
               <div class="contact-contact">
-
                 <h2 class="mb-30">Contact</h2>
-
                 <ul class="Contact-Details">
                   <li><span>Addis Ababa Street, East Legon</span></li>
                   <li><span>Accra, Ghana</span></li>
                   <li><span>+233 0203406047</span></li>
                   <li><span>maryokwong12@gmail.com</span></li>
                 </ul>
-
+                <p class="mt-3 small text-muted">
+                  Open to roles: <strong>Head of Strategy</strong>, <strong>Ecosystem Programs Lead</strong>, <strong>Strategic Ops</strong> — Web3, fintech, digital health.
+                </p>
               </div>
             </div>
 
             <div class="col-lg-6">
               <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row gy-3">
-
                   <div class="col-lg-6">
                     <div class="form-group contact-block1">
                       <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -260,15 +282,13 @@
 
                   <div class="col-lg-6">
                     <div class="form-group">
-                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                        required>
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                     </div>
                   </div>
 
                   <div class="col-lg-12">
                     <div class="form-group">
-                      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                        required>
+                      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                     </div>
                   </div>
 
@@ -291,35 +311,33 @@
                 </div>
               </form>
             </div>
+
           </div>
         </div>
       </div>
-    </div><!-- End Contact Section -->
+    </div>
+    <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
     <div class="container">
       <div class="socials-media text-center">
-
         <ul class="list-unstyled">
           <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://twitter.com/cryptotechgirl_"><i class="bi bi-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/okwongmary/"><i class="bi bi-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/maryokwong/"><i class="bi bi-linkedin"></i></a></li>
         </ul>
-
       </div>
-
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div> 
-
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
-  </div><!-- End Footer -->
+  </div>
+  <!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -333,5 +351,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
